# meteor

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
config/: ship.conf
res/: help.txt
res/images/: buff.xcf  cover.xcf  plane.xcf  stone.xcf  stone2.xcf  stone3.xcf
src/: CMakeLists.txt  bullet.c  bullet.h  common.c  common.h  game.c  game.h  help.c  help.h  inputdialog.c  inputdialog.h  main.c  main.h  menu.c  menu.h  message.c  message.h  meteor.c  meteor.h  record.c  record.h  score.c  score.h  ship.c  ship.h  statusbar.c  statusbar.h  timedisplay.c  timedisplay.h
